# Python

./: .readthedocs.yaml  AttoPhysics.pyproj  Python.pyproj  Python.sln  README.md  pyproject.toml
.github/Workflows/: push_event_workflow.yml
.github/workflows/: flake8.yml  my_workflow.yml  python-app.yml  unitTests.yml
Data/: Binned_Initial_Condition_Grid_trunc
Data/Clustering/: DeleteResults.bat
MLexamples/: MLexamples.pyproj
MLexamples/Classification/MNIST/: DataFunctions.py  MLFunctions.py  RunSGDClassifier.py  SaveMNISTdata.py
MLexamples/Regression/IRIS/: IRISclass.py  PredictIRIS.py
MLexamples/Tests/: test_Regression.py
Source/: Wallet.py  test.py
Source/AttoPhysics/Global/: BaseDataHelper.py  test_BaseData.py
Source/AttoPhysics/TrajectoryPlotter/: PlotTrajDataHelper.py  Plot_Trajectories.py  test_TrajData.py
Source/Base/: BaseDataHelper.py  BasePlotter.py
Source/MachineLearning/ARC/: AsymCalculator.py  AsymCalculatorIO.py  AsymDataHelper.py  Calc_Assym.py  ImageCalculators.py  ImageClassifierHelper.py  Model_Asym.py  Predict_Assym.py
Source/MachineLearning/Clustering/: ClusteringHelper.py  GlobalClusteringFunctions.py  InitialDataAnalyser.py  RunClustering.py
Source/MachineLearning/Regression/: ModelAnalyser.py  ModelAnalyserIO.py  (+1 more)
Source/Plotters/: Plot_Trajectories.py  TrajDataHelper.py
Tests/: test_AsymCalc.py  test_Base.py  test_Clustering.py  test_ContourData.py  test_Plotters.py  test_TrajData.py
docs/: conf.py  index.rst
docs/manual/: first-steps.rst  get-in-touch.rst  index.rst  installation.rst
docs/reference/: index.rst
(+3 files in other folders)
