[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "AttoPython"
description = "Atto Data Analysis and Machine Learning"
readme = "README.md"
requires-python = ">=3.6"
maintainers = [
    {name = "Bradley Augstein", email = "b.augstein@ucl.ac.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "furo",
]

[project.urls]
Homepage = "https://github.com/ucapbba/AttoPython"
Documentation = "https://attopython.readthedocs.io/en/latest/"


[tool.hatch]
version.source = "vcs"

